PlayfulShark/force-app/main/default/objects/Account/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Account Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>