PlayfulShark/force-app/main/default/objects/Account/fields/is_Gold__c.field-meta.xml
<CustomField>
    <fullName>is_Gold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Gold</label>
    <type>Checkbox</type>
</CustomField>