PlayfulShark/force-app/main/default/objects/Account/fields/Out_of_Postal__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Postal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Out of Postal</label>
    <type>Checkbox</type>
</CustomField>